# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-08-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change Java CloudI API List return types to not be abstract

2016-08-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix final keyword usage in Java CloudI API

2016-08-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_timestamp functions seconds_os/0,
      milliseconds_os/0, microseconds_os/0
    * Use new cloudi_timestamp:milliseconds_os/0 function to reduce latency
    * Improve request_timeout_adjustment logic
    * Improve quickstart markdown format

2016-08-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Java 8 method reference support to the Java CloudI API
    * Improve the constant usage within the Java CloudI API

2016-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add arity checking in the Java CloudI API subscribe function

2016-08-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Java CloudI API timestamp accessor for ISO8601 SQL variation
    * Add Java CloudI API timestamp accessor for a microseconds integer value

2016-08-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Java CloudI API accessors on the TransId class to get
      the timestamp when the service request was created

2016-07-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow internal CloudI services to optionally use the callbacks
      cloudi_service_handle_request/11 and
      cloudi_service_handle_info/3
    * Update pqueue

2016-07-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlcloud

2016-07-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify logger module creation

2016-06-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add directory external service configuration option to set the 
      current working directory for the external service OS process

2016-06-26 Michael Truog   <mjtruog [at] gmail (dot) com>